--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'French fiction -- Translations into Spanish'
 - !lcc 'PQ'
+- GITenberg
 title: Plick y Plock
 url: http://www.gutenberg.org/ebooks/29770
